--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.12.0",
+    "bulma": "^1.0.4",
+    "chart.js": "^2.9.4",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.11.2",
     "react-dom": "^16.12.0",
-    "react-scripts": "^5.0.1"
+    "react-redux": "^7.2.9",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "^5.0.1",
+    "react-spring": "^9.7.3",
+    "typescript": "^5.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
